Score color change

--- a/aimTEST.html
+++ b/aimTEST.html
@@ -40,7 +40,7 @@
 
 <style>
     #scoreHolder {
-        color:blue;
+        color:green;
         text-align: center;
         font-size: 35px;
         width: 100px;
